--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "config": "3.3.1",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "mongo": "^0.1.0",
+    "mongodb": "^4.9.0",
+    "mongoose": "^6.5.2",
     "nodemon": "^2.0.19"
   }
 }
